# cargo-remote

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  REMOTE_SETUP.MD
src/: config.rs  main.rs
