[package]
name = "cargo-remote"
description = "Cargo subcommand to build rust projects remotely"
keywords = ["remote", "build"]
categories = ["command-line-utilities", "development-tools::build-utils", "development-tools::cargo-plugins"]
maintenance = { status = "experimental" }
version = "0.1.2"
authors = ["Sebastian Geisler <sgeisler@wh2.tu-dresden.de>"]
license = "MIT"
repository = "https://github.com/sgeisler/cargo-remote"

[dependencies]
structopt = "0.1.6"
structopt-derive = "0.1.6"
cargo_metadata = "0.4.1"
log = "0.4.1"
simple_logger = "0.4.0"
toml = "0.4.5"
xdg = "2.1.0"
