[package]
name = "cargo-remote"
description = "Cargo subcommand to build rust projects remotely"
keywords = ["remote", "build"]
categories = ["command-line-utilities", "development-tools::build-utils", "development-tools::cargo-plugins"]
maintenance = { status = "experimental" }
version = "0.2.1"
authors = ["Sebastian Geisler <sgeisler@wh2.tu-dresden.de>", "Zannis Kalampoukis <zannis.kal@gmail.com>"]
license = "MIT"
repository = "https://github.com/sgeisler/cargo-remote"
edition = "2018"
readme = "README.md"

[dependencies]
structopt = "0.2.18"
cargo_metadata = "0.8.0"
log = "0.4.1"
simple_logger = "1.3.0"
xdg = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
config = "0.11"
